# awsp

./: pyproject.toml
awsp/: cli.py
tests/: test_cli.py
