[project]
name = "awsp"
version = "0.1.0"
description = "AWS Profile Switcher - Manage AWS CLI profiles easily"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Punit"}
]
dependencies = [
    "typer[all]>=0.9.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
awsp = "awsp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["awsp"]
